--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 list(APPEND SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
-    # ${CMAKE_CURRENT_SOURCE_DIR}/audio_client.hpp
-    # ${CMAKE_CURRENT_SOURCE_DIR}/audio_client.cpp
+    # ${CMAKE_CURRENT_SOURCE_DIR}/audio_client.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/audio_client.cpp
 )
 
 set(SOURCES ${SOURCES} PARENT_SCOPE)
